--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,6 +22,10 @@
                 <input type="password" name="password" id="passwordId" class="form-control">
             </div>
             <div class="form-group">
+                <label for="confirmPasswordId">確認密碼</label>
+                <input type="password" name="confirmPassword" id="confirmPasswordId" class="form-control">
+            </div>
+            <div class="form-group">
                 <label for="emailId">電子信箱</label>
                 <input type="email" name="email" id="emailId" class="form-control">
             </div>
